--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.16",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
+    "flowbite-typography": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
